# CCS

./: .clang-format  .gitignore  Doxyfile  LICENSE  Makefile.am  README.md  Tree Sampling.md  VERSION  cconfigspace.pc.in  cconfigspace.pc.subst.in  configure.ac
bindings/: Makefile.am
bindings/python/: .gitignore  Makefile  Makefile.am  README.md  setup.py  tasks.py
bindings/python/cconfigspace/: __init__.py  __version__.py  base.py  binding.py  configuration.py  configuration_space.py  context.py  distribution.py  distribution_space.py  error_stack.py  evaluation.py  evaluation_binding.py  expression.py  expression_parser.py  feature_space.py  features.py  features_evaluation.py  features_space.py  features_tuner.py  hyperparameter.py  interval.py  map.py  objective_space.py  parameter.py  rng.py  tree.py  tree_configuration.py  tree_evaluation.py  tree_space.py  tree_tuner.py  tuner.py
bindings/python/sample/: cconfigspace.ipynb  performance.py
bindings/python/test/: test_base.py  test_configuration_space.py  test_distribution.py  test_evaluation.py  test_expression.py  test_expression_parser.py  test_feature_space.py  test_features_space.py  test_features_tuner.py  test_hyperparameter.py  test_interval.py  test_objective_space.py  test_parameter.py  test_rng.py  test_tree.py  test_tree_evaluation.py  test_tree_space.py  test_tree_tuner.py  test_tuner.py  tuner_server.py
bindings/ruby/: Makefile.am  cconfigspace.gemspec  rakefile
bindings/ruby/lib/: cconfigspace.rb
bindings/ruby/lib/cconfigspace/: base.rb  binding.rb  configuration.rb  configuration_space.rb  context.rb  distribution.rb  distribution_space.rb  error_stack.rb  evaluation.rb  evaluation_binding.rb  expression.rb  expression_parser.rb  feature_space.rb  features.rb  features_evaluation.rb  features_space.rb  features_tuner.rb  hyperparameter.rb  interval.rb  map.rb  objective_space.rb  parameter.rb  rng.rb  tree.rb  tree_configuration.rb  tree_evaluation.rb  tree_space.rb  tree_tuner.rb  tuner.rb
bindings/ruby/test/: test_base.rb  test_configuration_space.rb  test_distribution.rb  test_evaluation.rb  test_expression.rb  test_expression_parser.rb  test_feature_space.rb  test_features_space.rb  test_features_tuner.rb  test_hyperparameter.rb  test_interval.rb  test_objective_space.rb  test_parameter.rb  test_rng.rb  test_tree.rb  test_tree_evaluation.rb  test_tree_space.rb  test_tree_tuner.rb  test_tuner.rb  tuner_server.rb
build-aux/: git-version-gen  version-subst  version_subst
connectors/: Makefile.am
connectors/kokkos/: Makefile.am  README.md  ccs-kokkos-connector.cpp
docs/: annotated.html  base_8h.html  base_8h__dep__incl.md5  base_8h__incl.md5  base_8h_source.html  binding_8h.html  binding_8h__dep__incl.md5  binding_8h_source.html  cconfigspace_8h.html  cconfigspace_8h__incl.md5  cconfigspace_8h_source.html  classes.html  configuration_8h.html  configuration_8h__dep__incl.md5  configuration_8h_source.html  configuration__space_8h.html  configuration__space_8h__dep__incl.md5  configuration__space_8h_source.html  context_8h.html  context_8h__dep__incl.md5  context_8h_source.html  dir_000000_000001.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_ea08e0b79e4e8c88c041fc4f37676f20.html  distribution_8h.html  distribution_8h__dep__incl.md5  distribution_8h_source.html  error__stack_8h.html  (+82 more)
include/: Makefile.am  cconfigspace.h
include/cconfigspace/: base.h  binding.h  configuration.h  configuration_space.h  context.h  distribution.h  distribution_space.h  error_stack.h  evaluation.h  evaluation_binding.h  expression.h  feature_space.h  features.h  features_evaluation.h  features_space.h  features_tuner.h  hyperparameter.h  interval.h  map.h  objective_space.h  parameter.h  rng.h  tree.h  tree_configuration.h  tree_evaluation.h  tree_space.h  tree_tuner.h  tuner.h
include/ccs/: base.h  condition.h  configuration.h  configuration_space.h  distribution.h  evaluation.h  expression.h  hyperparameter.h  interval.h  objective_space.h  result.h  rng.h  tuner.h
samples/: Makefile.am  test_python.c  test_python.py  test_python_from_ruby.rb  test_ruby.c  test_ruby.rb
src/: Makefile.am  binding.c  binding_internal.h  cconfigspace.c  cconfigspace.h  cconfigspace_deserialize.h  cconfigspace_internal.h  condition.c  condition_internal.h  configuration.c  configuration_deserialize.h  configuration_internal.h  configuration_space.c  configuration_space_deserialize.h  configuration_space_internal.h  context.c  context_deserialize.h  context_internal.h  datum_hash.h  datum_uthash.h  distribution.c  distribution_deserialize.h  distribution_internal.h  distribution_mixture.c  distribution_multivariate.c  distribution_normal.c  distribution_roulette.c  distribution_space.c  distribution_space_deserialize.h  distribution_space_internal.h  distribution_uniform.c  error_stack.c  error_stack_internal.h  evaluation.c  evaluation_binding.c  evaluation_binding_internal.h  evaluation_deserialize.h  evaluation_internal.h  expression.c  expression_deserialize.h  (+74 more)
src/ccs/: configuration_space.h
tests/: Makefile.am  test_atomics.c  test_categorical_hyperparameter.c  test_categorical_parameter.c  test_condition.c  test_configuration_space.c  test_discrete_hyperparameter.c  test_discrete_parameter.c  test_distribution.c  test_distribution_space.c  test_dynamic_tree_space.c  test_error_stack.c  test_expression.c  test_feature_space.c  test_features_space.c  test_forbidden.c  test_interval.c  test_map.c  test_mixture_distribution.c  test_multivariate_distribution.c  test_normal_distribution.c  test_numerical_hyperparameter.c  test_numerical_parameter.c  test_ordinal_hyperparameter.c  test_ordinal_parameter.c  test_random_features_tuner.c  test_random_tree_tuner.c  test_random_tuner.c  test_rng.c  test_roulette_distribution.c  test_static_tree_space.c  test_string_hyperparameter.c  test_string_parameter.c  test_tree.c  test_uniform_distribution.c  test_user_defined_features_tuner.c  test_user_defined_tree_tuner.c  test_user_defined_tuner.c  test_utils.c  test_utils.h
(+127 files in other folders)
