include_HEADERS=cconfigspace.h

include_ccsdir=$(includedir)/ccs
include_ccs_HEADERS = \
			ccs/base.h \
			ccs/rng.h \
			ccs/distribution.h \
			ccs/interval.h \
			ccs/context.h \
			ccs/configuration_space.h \
			ccs/hyperparameter.h \
			ccs/expression.h \
			ccs/configuration.h \
			ccs/objective_space.h \
			ccs/result.h \
			ccs/tuner.h

