include_HEADERS=cconfigspace.h

include_ccsdir=$(includedir)/cconfigspace
include_ccs_HEADERS = \
			cconfigspace/base.h \
			cconfigspace/rng.h \
			cconfigspace/distribution.h \
			cconfigspace/interval.h \
			cconfigspace/context.h \
			cconfigspace/configuration_space.h \
			cconfigspace/hyperparameter.h \
			cconfigspace/expression.h \
			cconfigspace/configuration.h \
			cconfigspace/objective_space.h \
			cconfigspace/evaluation.h \
			cconfigspace/tuner.h

