include_HEADERS=cconfigspace.h

include_ccsdir=$(includedir)/cconfigspace
include_ccs_HEADERS = \
	cconfigspace/base.h \
	cconfigspace/error_stack.h \
	cconfigspace/rng.h \
	cconfigspace/distribution.h \
	cconfigspace/interval.h \
	cconfigspace/context.h \
	cconfigspace/configuration_space.h \
	cconfigspace/features_space.h \
	cconfigspace/hyperparameter.h \
	cconfigspace/expression.h \
	cconfigspace/binding.h \
	cconfigspace/configuration.h \
	cconfigspace/features.h \
	cconfigspace/objective_space.h \
	cconfigspace/evaluation.h \
	cconfigspace/features_evaluation.h \
	cconfigspace/tuner.h \
	cconfigspace/features_tuner.h \
	cconfigspace/map.h \
	cconfigspace/tree.h \
	cconfigspace/tree_space.h \
	cconfigspace/tree_configuration.h

